Various updates for application configurations, also for content storage within application scope